[tool.poetry]
name = "fcc-budget-app"
version = "0.1.0"
description = ""
authors = ["Jason Tolbert <jasonalantolbert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
